fix(www): ensure minimal changes to spacing on landing page

--- a/apps/www/app/_components/blog-card/blog-card.module.css
+++ b/apps/www/app/_components/blog-card/blog-card.module.css
@@ -16,6 +16,10 @@
   }
 }
 
+.heading {
+  margin-block-start: var(--ds-size-4);
+}
+
 .tag {
   margin-bottom: 0;
   padding: 3px 9px;
